<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WTFParking</string>
    <string name="action_settings">Settings</string>
    <string name="parking_list_button">Parking List</string>
    <string name="parking_map_button">Campus Map</string>
    <string name="favorite_button">Favorite</string>
    <string name="filter_button">Filter</string>
    <string name="today_parking_button">Lot by Day</string>
    <string name="custom_list_view">Custom ListView Contents</string>
    <string name="uri">URI:</string>
    <string name="include_resident">Filter Resident</string>
    <string name="include_commuter">Filter Commuter</string>
    <string name="include_faculty">Filter Faculty</string>
    <string name="include_visitor">Filter Visitor</string>
    <string name="include_handicapped">Filter Handicapped</string>
    <string name="include_meter">Filter Meter Parking</string>
    <string name="submit_button">Submit</string>
    <string name="adm_comment_txt">Welcome to UNCC Parking Services.</string>
    <string name="name_text">Parking Name</string>
    <string name="cap_text">Capacity</string>
    <string name="avail_text">Full</string>
    <string name="stat_text">Status</string>
    <string name="refresh">Refresh</string>

</resources>
